--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "17.0.1",
-    "reactotron-react-native": "^5.0.0"
+    "reactotron-react-native": "^5.0.0",
+    "reactotron-redux": "^3.1.3"
   },
   "jest": {
     "preset": "react-native"
