--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@widergy/mobile-ui": "^0.19.9",
     "apisauce": "^2.1.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
