--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "apisauce": "^2.1.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
-    "react-native-document-picker": "^5.1.0",
+    "react-native-document-picker": "^5.2.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.0.3",
-    "react-native-image-resizer": "^1.4.4",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
@@ -32,6 +32,7 @@
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
+    "redux-form": "^8.3.7",
     "redux-recompose": "^3.0.0",
     "redux-thunk": "^2.3.0",
     "seamless-immutable": "^7.1.4"
